# neml2

./: AssociativeJ2FlowDirection_8h_source.html  BackwardEulerTimeIntegration_8h_source.html  BufferStore_8h_source.html  CMakeLists.txt  CMakePresets.json  ComposedModel_8h_source.html  CopyVariable_8h_source.html  CrystalMean_8h_source.html  DependencyResolver_8h_source.html  Eigenstrain_8h_source.html  ElasticStrainRate_8h_source.html  Elasticity_8h_source.html  FixOrientation_8h_source.html  FixedSizeWorkGenerator_8h_source.html  FlowRule_8h_source.html  ForwardEulerTimeIntegration_8h_source.html  GTNYieldFunction_8h_source.html  GursonCavitation_8h_source.html  ImplicitUpdate_8h_source.html  IncrementToRate_8h_source.html  IsotropicHardeningStaticRecovery_8h_source.html  IsotropicHardening_8h_source.html  KinematicHardeningStaticRecovery_8h_source.html  KinematicHardening_8h_source.html  KocksMeckingActivationEnergy_8h_source.html  KocksMeckingFlowSwitch_8h_source.html  LinearCombination_8h_source.html  MandelStress_8h_source.html  MixedControlSetup_8h_source.html  Model_8h_source.html  NonlinearParameter_8h_source.html  NonlinearSystem_8h_source.html  Normality_8h_source.html  OlevskySinteringStress_8h_source.html  OrientationRate_8h_source.html  ParameterStore_8h_source.html  PlasticDeformationRate_8h_source.html  PlasticFlowRate_8h_source.html  PlasticVorticity_8h_source.html  R2toSR2_8h_source.html  (+430 more)
.github/workflows/: build_docs.yml  cmake_integration.yml  cpp.yml  deps.yml  python.yml
cmake/Modules/: NEML2Dependencies.cmake
cmake/timpi/: CMakeLists.txt
cmake/wasp/: CMakeLists.txt
coverage/: cmd_line  coverage.info  genhtml.out  index-sort-f.html  index-sort-l.html  index.html
coverage/base/: CrossRef.cxx.func-c.html  CrossRef.cxx.func.html  CrossRef.cxx.gcov.html  DiagnosticsInterface.cxx.func-c.html  DiagnosticsInterface.cxx.func.html  DiagnosticsInterface.cxx.gcov.html  EnumSelection.cxx.func-c.html  EnumSelection.cxx.func.html  EnumSelection.cxx.gcov.html  EnumSelectionBase.cxx.func-c.html  EnumSelectionBase.cxx.func.html  EnumSelectionBase.cxx.gcov.html  Factory.cxx.func-c.html  Factory.cxx.func.html  Factory.cxx.gcov.html  HITParser.cxx.func-c.html  HITParser.cxx.func.html  HITParser.cxx.gcov.html  MultiEnumSelection.cxx.func-c.html  MultiEnumSelection.cxx.func.html  MultiEnumSelection.cxx.gcov.html  NEML2Object.cxx.func-c.html  NEML2Object.cxx.func.html  NEML2Object.cxx.gcov.html  OptionCollection.cxx.func-c.html  OptionCollection.cxx.func.html  OptionCollection.cxx.gcov.html  OptionSet.cxx.func-c.html  OptionSet.cxx.func.html  OptionSet.cxx.gcov.html  Registry.cxx.func-c.html  Registry.cxx.func.html  Registry.cxx.gcov.html  Settings.cxx.func-c.html  Settings.cxx.func.html  Settings.cxx.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage/dispatcher/: SimpleScheduler.cxx.func-c.html  SimpleScheduler.cxx.func.html  SimpleScheduler.cxx.gcov.html  SliceGenerator.cxx.func-c.html  SliceGenerator.cxx.func.html  SliceGenerator.cxx.gcov.html  StaticHybridScheduler.cxx.func-c.html  index.html  (+10 more)
python/: classcore_1_1LabeledAxis-members.html  classcore_1_1LabeledAxis.html  classcore_1_1LabeledAxisAccessor-members.html  classcore_1_1LabeledAxisAccessor.html  classcore_1_1MatrixAssembler-members.html  classcore_1_1MatrixAssembler.html  classcore_1_1Model-members.html  classcore_1_1Model.html  classcore_1_1TensorValue-members.html  classcore_1_1TensorValue.html  classcore_1_1VectorAssembler-members.html  classcore_1_1VectorAssembler.html  classtensors_1_1MillerIndex-members.html  classtensors_1_1MillerIndex.html  classtensors_1_1MillerIndexBaseView-members.html  classtensors_1_1MillerIndexBaseView.html  classtensors_1_1MillerIndexBatchView-members.html  classtensors_1_1MillerIndexBatchView.html  classtensors_1_1Quaternion-members.html  classtensors_1_1Quaternion.html  classtensors_1_1QuaternionBaseView-members.html  classtensors_1_1QuaternionBaseView.html  classtensors_1_1QuaternionBatchView-members.html  classtensors_1_1QuaternionBatchView.html  classtensors_1_1R2-members.html  classtensors_1_1R2.html  classtensors_1_1R2BaseView-members.html  classtensors_1_1R2BaseView.html  classtensors_1_1R2BatchView-members.html  classtensors_1_1R2BatchView.html  classtensors_1_1R3-members.html  classtensors_1_1R3.html  classtensors_1_1R3BaseView-members.html  classtensors_1_1R3BaseView.html  classtensors_1_1R3BatchView-members.html  classtensors_1_1R3BatchView.html  classtensors_1_1R4-members.html  classtensors_1_1R4.html  classtensors_1_1R4BaseView-members.html  classtensors_1_1R4BaseView.html  (+112 more)
runner/: CMakeLists.txt
scripts/: clobber.sh  syntax_to_md.py
search/: all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_12.js  classes_13.js  classes_15.js  classes_16.js  classes_3.js  classes_5.js  classes_8.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_15.js  functions_16.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+15 more)
src/neml2/: CMakeLists.txt
src/neml2/dispatcher/: SimpleScheduler.cxx  SliceGenerator.cxx  StaticHybridScheduler.cxx  TensorLoader.cxx  ValueMapLoader.cxx
src/neml2/misc/: math.cxx  utils.cxx
src/neml2/models/: BufferStore.cxx  ComposedModel.cxx  ImplicitUpdate.cxx  IncrementToRate.cxx  Model.cxx  ParameterStore.cxx  R2toWR2.cxx  Variable.cxx  VariableStore.cxx
src/neml2/models/solid_mechanics/: Normality.cxx  SlopeSaturationVoceIsotropicHardening.cxx
src/neml2/solvers/: NonlinearSystem.cxx
src/neml2/tensors/: SR2.cxx
tests/: CMakeLists.txt
tests/dispatcher/: CMakeLists.txt  main.cxx  test_SliceGenerator.cxx  test_StaticHybridScheduler.cxx  test_TensorLoader.cxx  test_ValueMapLoader.cxx  test_WorkDispatcher_SliceGenerator_SimpleScheduler.cxx  test_WorkDispatcher_ValueMapLoader_SimpleScheduler.cxx  test_WorkDispatcher_ValueMapLoader_StaticHybridScheduler.cxx
(+556 files in other folders)
